k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-svc
  namespace: monolith
spec:
  selector:
    app: monolith
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
